# rust-telemetry

./: .gitignore  Cargo.toml  justfile
crates/example/: Cargo.toml
crates/example/src/: main.rs
crates/logger/: Cargo.toml
crates/logger/src/: config.rs  lib.rs  loggers.rs
crates/logger/src/utils/: ansi.rs  mod.rs
crates/logger/src/writers/: file.rs  memory.rs  mod.rs  stdout.rs
crates/logger/tests/: loggers_tests.rs  logging_tests.rs
crates/logger/tests/snapshots/: loggers_tests__debug_output.snap  loggers_tests__error_output.snap  loggers_tests__info_output.snap  loggers_tests__multiple_logs.snap  loggers_tests__warn_output.snap
